[metadata]
name = RL-Lib
version = 0.1.0
author = Masoud
description = A simple reinforcement learning library using PPO
license = MIT

[options]
packages = find:
package_dir =
    = src
install_requires =
    gymnasium
    pygame
    stable-baselines3
    torch
    numpy
python_requires = >=3.8

[options.entry_points]
console_scripts =
    RLLib = RL_Lib.cli:main
